Added first Controls

--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = Main.o UI_System.o
+OBJFILES = Main.o UI_System.o controls.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -11,8 +11,9 @@ $(PROGRAM): $(OBJFILES)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Dependencies
-Main.o: Main.c UI_System.h
+Main.o: Main.c UI_System.h controls.h
 UI_System.o: UI_System.c UI_System.h
+controls.o: controls.c controls.h
 
 .PHONY: all clean run
 
