--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = Main.o UI_System.o
+OBJFILES = Main.o UI_System.o kampfsystem.o gegner.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -11,8 +11,10 @@ $(PROGRAM): $(OBJFILES)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Dependencies
-Main.o: Main.c UI_System.h
+Main.o: Main.c UI_System.h kampfsystem.h gegner.h
 UI_System.o: UI_System.c UI_System.h
+kampfsystem.o: kampfsystem.c kampfsystem.h gegner.h
+gegner.o:gegner.c gegner.h
 
 .PHONY: all clean run
 
