--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = main.o UI_System.o controls.o dorf.o
+OBJFILES = main.o UI_System.o controls.o dorf.o höhle.o inventory.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -11,10 +11,12 @@ $(PROGRAM): $(OBJFILES)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Dependencies
-main.o: main.c UI_System.h controls.h dorf.h
+main.o: main.c UI_System.h controls.h dorf.h höhle.h inventory.h
 UI_System.o: UI_System.c UI_System.h
 controls.o: controls.c controls.h
-dorf.o: dorf.h
+dorf.o: dorf.h inventory.h
+höhle.o: höhle.h
+inventory.h: inventory.c
 
 .PHONY: all clean run
 
