makefile auf gegner.o erstellt

--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = Main.o UI_System.o kampfsystem.o gegner.o
+OBJFILES = Main.o UI_System.o kampfsystem.o gegner.o waffe.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -15,6 +15,7 @@ Main.o: Main.c UI_System.h kampfsystem.h gegner.h
 UI_System.o: UI_System.c UI_System.h
 kampfsystem.o: kampfsystem.c kampfsystem.h gegner.h
 gegner.o:gegner.c gegner.h
+waffe.o:waffe.c waffe.h
 
 .PHONY: all clean run
 
