--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = main.o UI_System.o controls.o dorf.o höhle.o menu.o
+OBJFILES = main.o UI_System.o controls.o dorf.o höhle.o gameScreens.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -11,12 +11,12 @@ $(PROGRAM): $(OBJFILES)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Dependencies
-main.o: main.c UI_System.h controls.h dorf.h höhle.h menu.h
+main.o: main.c UI_System.h controls.h dorf.h höhle.h gameScreens.h
 UI_System.o: UI_System.c UI_System.h
 controls.o: controls.c controls.h
 dorf.o: dorf.h
 höhle.o: höhle.h
-menu.o: menu.h
+gameScreens.o: gameScreens.h
 
 .PHONY: all clean run
 
