--- a/GameFiles/Makefile
+++ b/GameFiles/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-OBJFILES = main.o UI_System.o controls.o dorf.o höhle.o gameScreens.o
+OBJFILES = main.o UI_System.o controls.o dorf.o höhle.o gameScreens.o gegner.o waffe.o
 PROGRAM = Game
 
 $(PROGRAM): $(OBJFILES)
@@ -11,12 +11,15 @@ $(PROGRAM): $(OBJFILES)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Dependencies
-main.o: main.c UI_System.h controls.h dorf.h höhle.h gameScreens.h
+main.o: main.c UI_System.h controls.h dorf.h höhle.h gameScreens.h kampfsystem.h gegner.h
 UI_System.o: UI_System.c UI_System.h
 controls.o: controls.c controls.h
 dorf.o: dorf.h
 höhle.o: höhle.h
 gameScreens.o: gameScreens.h
+gegner.o: gegner.c gegner.h
+waffe.o: waffe.c waffe.h
+kampfsystem.o: kampfsystem.c kampfsystem.h gegner.h waffe.h
 
 .PHONY: all clean run
 
